<resources>
    <string name="app_name">App_1st</string>

    <string name="lifecycle_method_list">生命周期方法列表</string>
    <string name="activity_status">Activity状态</string>

    <string name="MainActivity">MainActivity</string>
    <string name="start_MainActivity">启动Main</string>
    <string name="finish_MainActivity">结束Main</string>

    <string name="ActivityA">ActivityA</string>
    <string name="start_ActivityA">启动A</string>
    <string name="finish_ActivityA">结束A</string>

    <string name="ActivityB">ActivityB</string>
    <string name="start_ActivityB">启动B</string>
    <string name="finish_ActivityB">结束B</string>

    <string name="ActivityDialog">ActivityDialog</string>
    <string name="start_ActivityDialog">启动Dialog</string>
    <string name="finish_ActivityDialog">结束Dialog</string>

    <string name="on_create">onCreate</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>
</resources>
